# utils

./: .gitignore  AGENTS.md  MEMORIES.md  README.md  benchmark_optim.py  clahe_equalize_adapthist.py  color_coded_projection.py  copy_params_impl.py  copy_params_impl_final.py  copy_params_impl_final2.py  copy_params_impl_format.py  copy_params_js.js  copy_params_plan.md  copy_params_py.py  copy_params_test.html  debug_js.py  dimensionality_parser.py  extended_depth_of_focus.py  fix_slice_widget.py  fix_slice_widget2.py  fix_slice_widget3.py  fix_slice_widget4.py  format_params.py  hist_imshow.py  inspect_pacmap4.py  marimo_app.py  maxproj_registration.py  patch.py  patch2.py  patch3.py  patch4.py  patch5.py  patch_alpha.py  patch_annotator.py  patch_annotator2.py  patch_annotator_fix.py  patch_annotator_init.py  patch_colormap.py  patch_file.py  patch_hist_range.py  (+64 more)
.github/workflows/: build-wasm-wheel.yml  ci.yml
.jules/: bolt.md  matth.md  testr.md
docs/: AGENTS.md  MEMORIES.md  matth.md  testr.md
notebooks/: color_projection_clahe_demo.py  demo_3d_ortho_views_interactive.ipynb  demo_clahe_equalize_adapthist.py  demo_dimensionality_parser.py  demo_extended_depth_of_focus.py  demo_intensity_rescaling.py  demo_maxproj_registration.py  demo_multichannel_interactive_ortho_views.py  demo_plotting_utils.py  demo_sc_eps_annotation.py  demo_sc_moran_archetypes.py  demo_sc_pacmap.py  demo_single_cell.py  demo_stats.py  demo_surface_extraction.py  github_colab_eigenp_utils_visual_testing.ipynb  kknn_ingest_benchmark.html  kknn_ingest_benchmark.py  pybasic_demo.py  run_demo.py  test_kknn_leiden.py
notebooks/__marimo__/session/: kknn_ingest_benchmark.py.json  (+2 more)
src/eigenp_utils/: __init__.py  clahe_equalize_adapthist.py  color_coded_projection.py  dimensionality_parser.py  extended_depth_of_focus.py  hist_imshow.py  image_and_labels_utils.py  image_io.py  intensity_rescaling.py  io.py  iso_scatter.js  labels_cmap_data.py  maxproj_registration.py  plotting_utils.py  single_cell.py  single_cell_debug.py  spline_utils.py  stats.py  surface_extraction.py  task_calendar_scheduler.py  tnia_plotting_3d.py  tnia_plotting_anywidgets.css  tnia_plotting_anywidgets.js  tnia_plotting_anywidgets.py  upscaling_utils.py
tests/: marimo_app.py  test_annotation_confidence.py  test_annotation_robustness.py  test_archetype_plot_args.py  test_archetype_properties.py  test_bidirectional_drift_sign.py  test_brightness_invariants.py  test_clahe_correctness.py  test_color_blending_properties.py  test_colormap_maker.py  test_depth_of_focus.py  test_depth_of_focus_reconstruction.py  test_depth_of_focus_subpixel.py  test_dimensionality_parser.py  test_dimensionality_parser_ambiguity.py  test_dimensionality_parser_correctness.py  test_dimensionality_parser_resizing.py  test_drift_bias_oscillation.py  test_drift_correction_accuracy.py  test_drift_correction_correctness.py  test_drift_edge_robustness.py  test_drift_global_vs_sequential.py  test_drift_integrity.py  test_drift_subpixel_precision.py  test_drift_windowing_bias.py  test_edof_comparison.py  test_edof_correctness.py  test_edof_interpolation.py  test_edof_reconstruction.py  test_extended_depth_of_focus.py  test_focus_equivariance.py  test_focus_properties.py  test_focus_smoothness.py  test_gamma_auto.py  test_image_and_labels_invariants.py  test_image_and_labels_utils.py  test_image_io.py  test_intensity_rescaling.py  test_interactive_ui.py  test_io.py  (+59 more)
