[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "eigenp-utils"           # project (distribution) name on install
version = "0.0.1"
description = "Utilities for EigenP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "scikit-image",
    "ipywidgets",
    "pandas",
    "tqdm",
    "numpy",
    "scipy"
]

[project.optional-dependencies]
plotting = [
    "plotly"
]
single-cell = [
    "pacmap>=0.7.3",
    "scanpy",
    "esda",
    "libpysal",
    "triku"
]
widgets = [
    "anywidget",
    "traitlets"
]

[tool.setuptools.package-data]
eigenp_utils = [
  "tnia_plotting_anywidgets.js",
  "tnia_plotting_anywidgets.css"
]

[tool.hatch.build.targets.wheel]
# Tell hatch where your package code lives (src-layout)
packages = ["src/eigenp_utils"]
