[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eigenp-utils"
version = "0.0.1"
description = "Utilities for EigenP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "scikit-image",
    "ipywidgets",
    "pandas",
    "tqdm",
    "numpy",
    "scipy"
]

[project.optional-dependencies]
single-cell = [
    "pacmap>=0.7.3",
    "scanpy",
    "esda",
    "libpysal",
    "triku",
    "leidenalg"
]
widgets = [
    "anywidget",
    "traitlets"
]
dev = [
    "pytest>=7.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eigenp_utils = [
  "tnia_plotting_anywidgets.js",
  "tnia_plotting_anywidgets.css",
  "scientific.mplstyle",
  "Inter-Regular.ttf"
]
