[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eigenp-utils"
version = "0.0.2"
description = "Utilities for EigenP"
readme = "README.md"
authors = [
  { name = "Panos Oikonomou" }
]
license = { file = "LICENSE.md" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Free for non-commercial use",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "matplotlib",
    "anywidget",
    "traitlets",
    "pandas",
    "tqdm",
    "numpy",
    "scipy"
]

[project.urls]
Homepage = "https://github.com/eigenP/utils"
Issues = "https://github.com/eigenP/utils/issues"
Repository = "https://github.com/eigenP/utils.git"

[project.optional-dependencies]
plotting = [
    "plotly",
    "statannotations"
]
single-cell = [
    "pacmap>=0.7.3",
    "scanpy",
    "esda",
    "libpysal",
    "triku",
    "leidenalg",
    "adjustText",
]
dev = [
    "pytest>=7.0.0",
    "marimo",
    "eigenp_utils[image-analysis,plotting,single-cell]"
]
image-analysis = [
    "scikit-image",
    "xarray",
]
all = [
    "eigenp_utils[image-analysis,plotting,single-cell,dev]"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eigenp_utils = [
  "tnia_plotting_anywidgets.js",
  "tnia_plotting_anywidgets.css",
  "iso_scatter.js",
  "scientific.mplstyle",
  "Inter-Regular.ttf"
]
